Add handler to display user's reservations
